plugins {
    id 'application'
    id 'java'
}

group = 'com.zolt'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'com.zolt.cli.ZoltCli'
    applicationName = 'zolt'
}

dependencies {
    implementation 'info.picocli:picocli:4.7.6'
    implementation 'org.tomlj:tomlj:1.1.1'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

tasks.named('test') {
    useJUnitPlatform()
}

def nativeOutputDir = layout.buildDirectory.dir('native')
def nativeBinary = nativeOutputDir.map { it.file('zolt') }
def nativeImageLog = nativeOutputDir.map { it.file('native-image.log') }
def nativeSeriousWarningTerms = ['warning', 'unsupported', 'error']

def javaExecutable = providers.provider {
    def executable = System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('win') ? 'java.exe' : 'java'
    new File(System.getProperty('java.home'), "bin/${executable}").absolutePath
}

tasks.register('nativeImage') {
    group = 'distribution'
    description = 'Build a native zolt binary with GraalVM Native Image.'
    dependsOn tasks.named('jar')

    inputs.files(tasks.named('jar').flatMap { it.archiveFile })
    inputs.files(configurations.runtimeClasspath)
    outputs.file(nativeBinary)
    outputs.file(nativeImageLog)

    doLast {
        def outputFile = nativeBinary.get().asFile
        def logFile = nativeImageLog.get().asFile
        outputFile.parentFile.mkdirs()
        def cacheDir = file('.zolt/cache')

        def zoltCommand = { List<String> args ->
            providers.exec {
                commandLine([javaExecutable.get(),
                             '-cp',
                             sourceSets.main.runtimeClasspath.asPath,
                             application.mainClass.get()] + args)
            }.result.get().assertNormalExitValue()
        }

        zoltCommand([
                'resolve',
                '--locked',
                '--cache-root',
                cacheDir.absolutePath
        ])

        def nativeArgs = [
                'native',
                '--cache-root',
                cacheDir.absolutePath
        ]
        def nativeImageExecutable = providers.gradleProperty('nativeImageExecutable').orNull
        if (nativeImageExecutable != null) {
            nativeArgs.addAll(['--native-image', nativeImageExecutable])
        }
        zoltCommand(nativeArgs)

        def zoltNativeOutput = file('target/native/zolt')
        def zoltNativeLog = file('target/native/native-image.log')
        java.nio.file.Files.copy(
                zoltNativeOutput.toPath(),
                outputFile.toPath(),
                java.nio.file.StandardCopyOption.REPLACE_EXISTING)
        java.nio.file.Files.copy(
                zoltNativeLog.toPath(),
                logFile.toPath(),
                java.nio.file.StandardCopyOption.REPLACE_EXISTING)
        logger.lifecycle("Native image log written to ${logFile}")
        logger.lifecycle("Native binary written to ${outputFile}")
    }
}

tasks.register('nativeSmokeTest') {
    group = 'verification'
    description = 'Build the native zolt binary and run native smoke tests against real project workflows.'
    dependsOn tasks.named('nativeImage')

    doLast {
        def binary = nativeBinary.get().asFile
        def smokeDir = layout.buildDirectory.dir('native-smoke').get().asFile
        providers.exec {
            commandLine javaExecutable.get(),
                    '-cp',
                    sourceSets.main.runtimeClasspath.asPath,
                    application.mainClass.get(),
                    'native-smoke',
                    '--binary',
                    binary.absolutePath,
                    '--work-dir',
                    smokeDir.absolutePath
        }.result.get().assertNormalExitValue()
        logger.lifecycle("Native smoke project workflow passed under ${smokeDir}")
    }
}

tasks.register('checkNativeImageWarnings') {
    group = 'verification'
    description = 'Fail when the Native Image log contains serious warning terms.'
    dependsOn tasks.named('nativeImage')

    inputs.file(nativeImageLog)

    doLast {
        def logFile = nativeImageLog.get().asFile
        def matches = logFile.readLines().findAll { line ->
            def lower = line.toLowerCase(Locale.ROOT)
            nativeSeriousWarningTerms.any { term -> lower.contains(term) }
        }
        if (!matches.isEmpty()) {
            throw new GradleException(
                    "Native Image warning check failed. Review ${logFile} and fix or explicitly document these lines:\n"
                            + matches.join('\n'))
        }
        logger.lifecycle("No serious Native Image warning terms found in ${logFile}")
    }
}

tasks.register('selfHostingParityCheck') {
    group = 'verification'
    description = 'Compare bootstrap-built and Zolt-built artifacts closely enough to trust self-hosting.'
    dependsOn tasks.named('jar')
    dependsOn tasks.named('nativeSmokeTest')

    doLast {
        def bootstrapJar = tasks.named('jar').get().archiveFile.get().asFile
        def parityDir = layout.buildDirectory.dir('self-hosting-parity').get().asFile
        def cacheDir = new File(parityDir, 'cache')
        parityDir.mkdirs()

        def zoltCommand = { List<String> args ->
            providers.exec {
                commandLine([javaExecutable.get(),
                             '-cp',
                             sourceSets.main.runtimeClasspath.asPath,
                             application.mainClass.get()] + args)
            }.result.get().assertNormalExitValue()
        }

        zoltCommand([
                'self-check',
                '--cache-root',
                cacheDir.absolutePath
        ])
        zoltCommand([
                'self-check',
                '--offline',
                '--cache-root',
                cacheDir.absolutePath
        ])
        zoltCommand([
                'self-parity',
                '--bootstrap-jar',
                bootstrapJar.absolutePath,
                '--cache-root',
                cacheDir.absolutePath
        ])
        logger.lifecycle("Self-hosting parity check passed for ${bootstrapJar}")
    }
}
